--- a/.env.dev
+++ b/.env.dev
@@ -2,3 +2,11 @@ HOST=127.0.0.1
 PORT=8080
 LOG_LEVEL=DEBUG
 FASTAPI_RELOAD=true
+SUPERUSERS=["3044507694"]
+
+VERIFY_KEY=Identify233
+DRIVER=~fastapi+~websockets
+
+MIRAI_HOST=127.0.0.1
+MIRAI_PORT=5700
+MIRAI_QQ=["3044507694"]
