--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,8 @@ loguru==0.6.0
 MarkupSafe==2.1.1
 multidict==6.0.2
 nb-cli==0.6.6
+nonebot-adapter-mirai2==0.0.10
+nonebot-adapter-onebot==2.0.0b1
 nonebot2==2.0.0b2
 poyo==0.5.0
 prompt-toolkit==3.0.28
