--- a/.env.dev
+++ b/.env.dev
@@ -2,11 +2,14 @@ HOST=127.0.0.1
 PORT=8080
 LOG_LEVEL=DEBUG
 FASTAPI_RELOAD=true
-SUPERUSERS=["3044507694"]
+SUPERUSERS=["1130067732"]
+COMMAND_START=["-",""]
 
-VERIFY_KEY=Identify233
+ONEBOT_ACCESS_TOKEN=Identify233
 DRIVER=~fastapi+~websockets
 
-MIRAI_HOST=127.0.0.1
-MIRAI_PORT=5700
-MIRAI_QQ=["3044507694"]
+HEISI_GROUP=["139957862","386047651"]
+HEISI_CD=30
+
+FORTUNE_PATH="resources/fortune"
+HOLOLIVE_FLAG=false
