--- a/.gitignore
+++ b/.gitignore
@@ -138,4 +138,7 @@ dmypy.json
 # pytype static type analyzer
 .pytype/
 
+# plugins cache
+resources/fortune
+
 # End of https://www.toptal.com/developers/gitignore/api/python
