--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ nonebot2 = "^2.0.0-beta.1"
 nb-cli = "^0.6.0"
 
 [tool.nonebot]
-plugins = []
+plugins = ["nonebot_plugin_manager", "nonebot_plugin_heisi", "random_cat_gif", "nonebot_plugin_withdraw", "nonebot_plugin_status", "nonebot_plugin_crazy_thursday", "nonebot_plugin_alias"]
 plugin_dirs = ["keke_bot/plugins"]
 
 [build-system]
