--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
+# Unit test2.py / coverage reports
 htmlcov/
 .tox/
 .nox/
