--- a/data/manager/plugin_list.yml
+++ b/data/manager/plugin_list.yml
@@ -3,10 +3,20 @@ bilitag:
   mode: '311'
   status: false
   user: {}
+chokelate:
+  group: {}
+  mode: '311'
+  status: false
+  user: {}
 echo:
   group: {}
   mode: '755'
   status: true
+  user: {}
+morning:
+  group: {}
+  mode: '311'
+  status: false
   user: {}
 nonebot_plugin_alias:
   group: {}
@@ -37,6 +47,11 @@ nonebot_plugin_manager:
   group: {}
   mode: '311'
   status: false
+  user: {}
+nonebot_plugin_petpet:
+  group: {}
+  mode: '755'
+  status: true
   user: {}
 nonebot_plugin_status:
   group: {}
