--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,8 @@ plugin_dirs = ["keke_bot/plugins"]
 [build-system]
 requires = ["poetry_core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[[tool.poetry.source]]
+name = "aliyun"
+url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
+default = true
