--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,21 @@ authors = []
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.7.3"
+python = "^3.10.2"
 nonebot2 = "^2.0.0-beta.1"
+nonebot-adapter-onebot = "^2.0.0-beta.1"
+nonebot-plugin-manager = "^0.5.9"
+nonebot-plugin-heisi = "^0.3.0"
+random-cat-gif = "^1.0.0"
+nonebot-plugin-withdraw = "^0.2.0"
+nonebot-plugin-status = "^0.3.0"
+nonebot-plugin-crazy-thursday = "^0.2.1"
+nonebot-plugin-alias = "^0.3.0"
+nonebot-plugin-htmlrender = "^0.0.4"
+nonebot-plugin-apscheduler = "^0.1.2"
+bilibili-api = "^9.1.0"
+nonebot-plugin-petpet = "^0.2.11"
+
 
 [tool.poetry.dev-dependencies]
 nb-cli = "^0.6.0"
@@ -20,7 +33,4 @@ plugin_dirs = ["keke_bot/plugins"]
 requires = ["poetry_core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[[tool.poetry.source]]
-name = "aliyun"
-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
-default = true
+
