--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,6 @@ nonebot2 = "^2.0.0-beta.1"
 nonebot-adapter-onebot = "^2.0.0-beta.1"
 nonebot-plugin-manager = "^0.5.9"
 nonebot-plugin-heisi = "^0.3.0"
-random-cat-gif = "^1.0.0"
 nonebot-plugin-withdraw = "^0.2.0"
 nonebot-plugin-status = "^0.3.0"
 nonebot-plugin-crazy-thursday = "^0.2.1"
@@ -20,13 +19,15 @@ nonebot-plugin-htmlrender = "^0.0.4"
 nonebot-plugin-apscheduler = "^0.1.2"
 bilibili-api = "^9.1.0"
 nonebot-plugin-petpet = "^0.2.11"
+requests = "^2.27.1"
+httpx-socks = "^0.7.3"
 
 
 [tool.poetry.dev-dependencies]
 nb-cli = "^0.6.0"
 
 [tool.nonebot]
-plugins = ["nonebot_plugin_manager", "nonebot_plugin_heisi", "random_cat_gif", "nonebot_plugin_withdraw", "nonebot_plugin_status", "nonebot_plugin_crazy_thursday", "nonebot_plugin_alias", "nonebot_plugin_petpet"]
+plugins = ["nonebot_plugin_manager", "nonebot_plugin_heisi", "nonebot_plugin_withdraw", "nonebot_plugin_status", "nonebot_plugin_crazy_thursday", "nonebot_plugin_alias", "nonebot_plugin_petpet"]
 plugin_dirs = ["keke_bot/plugins"]
 
 [build-system]
