--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = []
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10.2"
+python = "^3.9.7"
 nonebot2 = "^2.0.0-beta.1"
 nonebot-adapter-onebot = "^2.0.0-beta.1"
 nonebot-plugin-manager = "^0.5.9"
@@ -17,18 +17,19 @@ nonebot-plugin-crazy-thursday = "^0.2.1"
 nonebot-plugin-alias = "^0.3.0"
 nonebot-plugin-htmlrender = "^0.0.4"
 nonebot-plugin-apscheduler = "^0.1.2"
-bilibili-api = "^9.1.0"
 nonebot-plugin-petpet = "^0.2.11"
-requests = "^2.27.1"
 httpx-socks = "^0.7.3"
+httpx = ">=0.19.0"
+Jinja2 = "^3.0.0"
 
 
 [tool.poetry.dev-dependencies]
 nb-cli = "^0.6.0"
 
 [tool.nonebot]
-plugins = ["nonebot_plugin_manager", "nonebot_plugin_heisi", "nonebot_plugin_withdraw", "nonebot_plugin_status", "nonebot_plugin_crazy_thursday", "nonebot_plugin_alias", "nonebot_plugin_petpet"]
-plugin_dirs = ["keke_bot/plugins"]
+plugins = []
+plugin_dirs = []
+
 
 [build-system]
 requires = ["poetry_core>=1.0.0"]
