--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "keke-bot"
 version = "0.1.0"
 description = "keke-bot"
-authors = []
+authors = ['inscripoem']
 readme = "README.md"
 
 [tool.poetry.dependencies]
@@ -18,9 +18,6 @@ nonebot-plugin-alias = "^0.3.0"
 nonebot-plugin-htmlrender = "^0.0.4"
 nonebot-plugin-apscheduler = "^0.1.2"
 nonebot-plugin-petpet = "^0.2.11"
-httpx-socks = "^0.7.3"
-httpx = ">=0.19.0"
-Jinja2 = "^3.0.0"
 
 
 [tool.poetry.dev-dependencies]
