--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,13 +18,32 @@ nonebot-plugin-alias = "^0.3.0"
 nonebot-plugin-htmlrender = "^0.0.4"
 nonebot-plugin-apscheduler = "^0.1.2"
 nonebot-plugin-petpet = "^0.2.11"
+baike = "^1.5.0"
+cachetools = "^5.0.0"
+cos-python-sdk-v5 = "^1.9.0"
+feedparser = "^6.0.0"
+httpx = ">=0.19.0"
+imageio = "^2.13.0"
+Jinja2 = "^3.0.0"
+langid = "^1.1.0"
+lxml = "^4.7.0"
+mcstatus = "^6.5.0"
+numpy = "^1.21.0"
+Pillow = ">=8.4.0"
+PixivPy-Async = "^1.2.0"
+playwright = "^1.17.0"
+pydub = "^0.25.0"
+python-Levenshtein-wheels = "^0.13.0"
+tencentcloud-sdk-python = "^3.0.0"
+thefuzz = "^0.19.0"
+wolframalpha = "^5.0.0"
 
 
 [tool.poetry.dev-dependencies]
 nb-cli = "^0.6.0"
 
 [tool.nonebot]
-plugins = []
+plugins = ["nonebot_plugin_ddcheck", "nonebot_plugin_asoulcnki"]
 plugin_dirs = []
 
 
