--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.9.7"
 nonebot2 = "^2.0.0-beta.1"
 nonebot-adapter-onebot = "^2.0.0-beta.1"
+nonebot-plugin-apscheduler = "^0.1.2"
 nonebot-plugin-manager = "^0.5.9"
 nonebot-plugin-heisi = "^0.3.0"
 nonebot-plugin-withdraw = "^0.2.0"
@@ -29,13 +30,14 @@ langid = "^1.1.0"
 lxml = "^4.7.0"
 mcstatus = "^6.5.0"
 numpy = "^1.21.0"
-Pillow = ">=8.4.0"
+pillow = "^9.0.0"
 PixivPy-Async = "^1.2.0"
 playwright = "^1.17.0"
 pydub = "^0.25.0"
 python-Levenshtein-wheels = "^0.13.0"
 tencentcloud-sdk-python = "^3.0.0"
 thefuzz = "^0.19.0"
+ujson = "^5.1.0"
 wolframalpha = "^5.0.0"
 
 
