--- a/plugin_config.json
+++ b/plugin_config.json
@@ -6,7 +6,8 @@
     "nonebot_plugin_status",
     "nonebot_plugin_crazy_thursday",
     "nonebot_plugin_alias",
-    "nonebot_plugin_petpet"
+    "nonebot_plugin_petpet",
+    "nonebot_plugin_auto_teenstudy"
 
   ],
   "plugin_dirs" : ["keke_bot/plugins"]
