--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,6 @@ nonebot-plugin-status = "^0.3.0"
 nonebot-plugin-crazy-thursday = "^0.2.1"
 nonebot-plugin-alias = "^0.3.0"
 nonebot-plugin-htmlrender = "^0.0.4"
-nonebot-plugin-apscheduler = "^0.1.2"
 nonebot-plugin-petpet = "^0.2.11"
 baike = "^1.5.0"
 cachetools = "^5.0.0"
@@ -45,7 +44,7 @@ wolframalpha = "^5.0.0"
 nb-cli = "^0.6.0"
 
 [tool.nonebot]
-plugins = ["nonebot_plugin_ddcheck", "nonebot_plugin_asoulcnki"]
+plugins = ["nonebot_plugin_ddcheck", "nonebot_plugin_asoulcnki", "nonebot_plugin_auto_teenstudy"]
 plugin_dirs = []
 
 
